--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://bmwbyas.github.io/veonTech/",
+  "homepage": "https://bmwbyas.github.io/ve/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
